add ArticleType and ArticleManager service

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -10,7 +10,9 @@ parameters:
 
 framework:
     #esi: ~
-    #translator: { fallbacks: ['%locale%'] }
+    translator:
+        paths:
+            - '%kernel.project_dir%/app/Resources/FOSUserBundle/translations'
     secret: '%secret%'
     router:
         resource: '%kernel.project_dir%/app/config/routing.yml'
