--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -4,7 +4,7 @@ parameters:
     #parameter_name: value
 
 services:
-    # default configuration for services in *this* file
+    # homepage configuration for services in *this* file
     _defaults:
         # automatically injects dependencies in your services
         autowire: true
@@ -22,12 +22,23 @@ services:
         # but if a service is unused, it's removed anyway
         exclude: '../../src/AppBundle/{Entity,Repository,Tests}'
 
+    ArticleBundle\:
+            resource: '../../src/ArticleBundle/*'
+            # you can exclude directories or files
+            # but if a service is unused, it's removed anyway
+            exclude: '../../src/ArticleBundle/{Entity,Repository,Tests}'
+
     # controllers are imported separately to make sure they're public
     # and have a tag that allows actions to type-hint services
     AppBundle\Controller\:
         resource: '../../src/AppBundle/Controller'
         public: true
         tags: ['controller.service_arguments']
+
+    ArticleBundle\Controller\:
+            resource: '../../src/ArticleBundle/Controller'
+            public: true
+            tags: ['controller.service_arguments']
 
     # add more services, or override services that need manual wiring
     # AppBundle\Service\ExampleService:
