--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   },
   "dependencies": {
     "bootstrap": "^4.0.0-beta",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "popper.js": "^1.12.5"
   },
   "devDependencies": {
     "@symfony/webpack-encore": "^0.15.1",
-    "bootstrap-sass": "^3.3.7",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6"
   },
