--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "doctrine/orm": "^2.5",
         "friendsofsymfony/user-bundle": "~2.0",
         "incenteev/composer-parameter-handler": "^2.0",
+        "javiereguiluz/easyadmin-bundle": "^1.17",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
         "symfony/monolog-bundle": "^3.1.0",
@@ -33,7 +34,8 @@
         "symfony/swiftmailer-bundle": "^2.3.10",
         "symfony/symfony": "3.3.*",
         "symfony/var-dumper": "^3.3",
-        "twig/twig": "^1.0||^2.0"
+        "twig/twig": "^1.0||^2.0",
+        "vich/uploader-bundle": "^1.6"
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
@@ -53,6 +55,9 @@
         ],
         "post-update-cmd": [
             "@symfony-scripts"
+        ],
+        "build-params": [
+            "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters"
         ]
     },
     "config": {
