--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,9 @@
+fos_js_routing:
+    resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
+
+_liip_imagine:
+    resource: "@LiipImagineBundle/Resources/config/routing.xml"
+
 easy_admin_bundle:
     resource: "@EasyAdminBundle/Controller/AdminController.php"
     type:     annotation
@@ -9,9 +15,5 @@ fos_user:
 article:
     resource: "@ArticleBundle/Controller/"
     type:     annotation
-    prefix:   /article
 
-app:
-    resource: "@AppBundle/Controller/"
-    type: annotation
 
