add lastname and firstname at user's registration form

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -97,6 +97,8 @@ fos_user:
                 address:     registration@example.com
                 sender_name: Demo Registration
             template:        '@FOSUser/Registration/email.txt.twig'
+        form:
+            type: AppBundle\Form\RegistrationType
     resetting:
         email:
             from_email:
