--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "autoload": {
         "psr-4": {
             "AppBundle\\": "src/AppBundle",
-            "ArticleBundle\\": "src/ArticleBundle"
+            "ArticleBundle\\": "src/ArticleBundle",
+            "PaymentBundle\\": "src/PaymentBundle"
         },
         "classmap": [
             "app/AppKernel.php",
@@ -29,6 +30,8 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "javiereguiluz/easyadmin-bundle": "^1.17",
         "liip/imagine-bundle": "^1.9",
+        "payum/payum-bundle": "^2.2",
+        "php-http/guzzle6-adapter": "^1.1",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
         "symfony/monolog-bundle": "^3.1.0",
